# Django-Library-Management-Borrowing-System

./: README.md
backend/: .gitignore  erd.dot  pyproject.toml
backend/apps/borrow/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/borrow/migrations/: 0001_initial.py  0002_initial.py  0003_alter_borrowmodel_borrow_date_and_more.py  0004_alter_borrowmodel_borrow_date.py  0005_alter_borrowmodel_borrow_date.py
backend/apps/catalog/: models.py  serializers.py  urls.py  views.py
backend/apps/catalog/migrations/: 0001_initial.py
backend/apps/users/: models.py  serializers.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/core/: settings.py  urls.py
